# safir_email_notifier

./: .gitignore  README.rst  setup.cfg
safir_email_notifier/: email_builder.py  email_notifier.py
safir_email_notifier/locale/tr/LC_MESSAGES/: email_builder.mo  email_builder.pot
safir_email_notifier/templates/en/: billing_alarm_notification.ftl  billing_alarm_ok.ftl  billing_suspention_notification.ftl  billing_suspention_ok.ftl  billing_termination_notification.ftl  billing_termination_ok.ftl  billing_weekly_report.ftl  cloud_alarm_alarm.ftl  cloud_alarm_ok.ftl  cloud_reset_password.ftl  cloud_user_activation.ftl  error_notification.ftl
safir_email_notifier/templates/tr/: billing_alarm_notification.ftl  billing_alarm_ok.ftl  billing_suspension_notification.ftl  billing_suspension_ok.ftl  billing_termination_notification.ftl  billing_termination_ok.ftl  billing_weekly_report.ftl  cloud_alarm_alarm.ftl  cloud_alarm_ok.ftl  cloud_reset_password.ftl  cloud_user_activation.ftl  error_notification.ftl
